# HW1-FAST-AQ-Parser

./: HW1_test.ipynb  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: HW1_test-checkpoint.ipynb
seqparser/: parse.py  seq.py
tests/: bad.fa  test_parsers.py  test_transcribe.py
